// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email Verification success 1`] = `
Object {
  "email": "unverified_user_test@example.com",
  "emailVerified": true,
  "firstName": "Unverified User",
  "id": 4,
  "lastName": "Test",
}
`;

exports[`Email Verification with invalid token 1`] = `
Object {
  "message": "Invalid token",
}
`;

exports[`Email Verification with token-email mismatch 1`] = `
Object {
  "message": "Invalid token",
}
`;

exports[`Resend Email Verification with invalid email 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Resend Email Verification with unregistered email 1`] = `
Object {
  "message": "Email Verification request submitted successfully",
}
`;
